# crafd-donor-portal

./: .env.example  .gitignore  AIRTABLE_CONFIG_GUIDE.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  vercel.json
.github/: copilot-instructions.md
.github/workflows/: sync-data.yml
.next-docs/01-app/03-api-reference/05-config/01-next-config-js/: headers.mdx
data/processed/: df_leads.csv  df_leads.parquet
public/data/: partners.json
python/api/: airtable.py
python/partners/: 01-fetch_partners.py
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/(dashboard)/data/: page.tsx
src/app/(dashboard)/data/contacts/: page.tsx
src/app/(dashboard)/data/partners/: page.tsx
src/app/(dashboard)/data/steerco/: page.tsx
src/app/(dashboard)/steerco/: page.tsx
src/app/auth/: route.ts
src/app/ecosystem/: page.tsx
src/app/financing/: page.tsx
src/app/impact/: page.tsx
src/app/login/: page.tsx
src/app/logout/: route.ts
src/app/partners/: page.tsx
src/components/: ClientWrapper.tsx  Header.tsx  HeaderSelect.tsx  IframeLayer.tsx  TabContext.tsx  UnifiedDashboard.tsx
src/components/ui/: card.tsx  table.tsx
src/config/: airtable.ts
src/lib/: airtable-prefetch.ts  useAirtablePrefetch.ts
src/lib/data/: partners.ts
src/types/: index.ts
