[project]
name = "crafd-financial-dashboard-web"
version = "0.1.0"
description = "CRAF’d | Transparency Portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",    "psycopg2-binary>=2.9.10",    "pyairtable>=3.3.0",
    "python-dotenv>=1.2.1",
]
